Завершил тест Functional1. Полностью поменял решение в задании wordsWithout из теста AP1